// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useContextualLink should return correct link for dev_panel 1`] = `
Object {
  "all": Array [
    Array [
      "Learn more about ",
      <ContextualLineLink
        href="https://docs.saleor.io/api-reference/"
        onClick={[Function]}
      >
        API reference
      </ContextualLineLink>,
      " and view ",
      <ContextualLineLink
        href="https://docs.saleor.io/api-usage/overview"
        onClick={[Function]}
      >
        API guide
      </ContextualLineLink>,
    ],
  ],
  "current": Array [
    "Learn more about ",
    <ContextualLineLink
      href="https://docs.saleor.io/api-reference/"
      onClick={[Function]}
    >
      API reference
    </ContextualLineLink>,
    " and view ",
    <ContextualLineLink
      href="https://docs.saleor.io/api-usage/overview"
      onClick={[Function]}
    >
      API guide
    </ContextualLineLink>,
  ],
  "error": undefined,
}
`;

exports[`useContextualLink should return correct link for extending_saleor 1`] = `
Object {
  "all": Array [
    Array [
      "Learn more about ",
      <ContextualLineLink
        href="https://docs.saleor.io/developer/extending/webhooks/overview"
        onClick={[Function]}
      >
        extending Saleor with Webhooks
      </ContextualLineLink>,
    ],
  ],
  "current": Array [
    "Learn more about ",
    <ContextualLineLink
      href="https://docs.saleor.io/developer/extending/webhooks/overview"
      onClick={[Function]}
    >
      extending Saleor with Webhooks
    </ContextualLineLink>,
  ],
  "error": undefined,
}
`;

exports[`useContextualLink should return correct link for gift_cards 1`] = `
Object {
  "all": Array [
    Array [
      "Learn more about ",
      <ContextualLineLink
        href="https://docs.saleor.io/developer/gift-cards"
        onClick={[Function]}
      >
        gift cards
      </ContextualLineLink>,
    ],
  ],
  "current": Array [
    "Learn more about ",
    <ContextualLineLink
      href="https://docs.saleor.io/developer/gift-cards"
      onClick={[Function]}
    >
      gift cards
    </ContextualLineLink>,
  ],
  "error": undefined,
}
`;

exports[`useContextualLink should return correct link for order_list 1`] = `
Object {
  "all": Array [
    Array [
      "Learn more about ",
      <ContextualLineLink
        href="https://docs.saleor.io/developer/checkout/order-status"
        onClick={[Function]}
      >
        order management
      </ContextualLineLink>,
    ],
  ],
  "current": Array [
    "Learn more about ",
    <ContextualLineLink
      href="https://docs.saleor.io/developer/checkout/order-status"
      onClick={[Function]}
    >
      order management
    </ContextualLineLink>,
  ],
  "error": undefined,
}
`;

exports[`useContextualLink should return correct link for product_list 1`] = `
Object {
  "all": Array [
    Array [
      "Learn more about ",
      <ContextualLineLink
        href="https://docs.saleor.io/developer/products/configuration"
        onClick={[Function]}
      >
        product configurations
      </ContextualLineLink>,
    ],
  ],
  "current": Array [
    "Learn more about ",
    <ContextualLineLink
      href="https://docs.saleor.io/developer/products/configuration"
      onClick={[Function]}
    >
      product configurations
    </ContextualLineLink>,
  ],
  "error": undefined,
}
`;

exports[`useContextualLink should return correct link for staff_members 1`] = `
Object {
  "all": Array [
    Array [
      "Learn more about ",
      <ContextualLineLink
        href="https://docs.saleor.io/developer/permissions#user-permissions"
        onClick={[Function]}
      >
        User permissions
      </ContextualLineLink>,
    ],
  ],
  "current": Array [
    "Learn more about ",
    <ContextualLineLink
      href="https://docs.saleor.io/developer/permissions#user-permissions"
      onClick={[Function]}
    >
      User permissions
    </ContextualLineLink>,
  ],
  "error": undefined,
}
`;

exports[`useContextualLink should return correct link for webhooks_events 1`] = `
Object {
  "all": Array [
    null,
  ],
  "current": null,
  "error": undefined,
}
`;
